--- a/stack.yaml
+++ b/stack.yaml
@@ -9,6 +9,9 @@ Parameters:
   lambdaFunctionCodeArchive:
     Type: String
     Default: image-handler.zip
+  lambdaFunctonMemoryLimit:
+    Type: Number
+    Default: 1536
 Resources:
   S3Bucket:
     Type: 'AWS::S3::Bucket'
@@ -31,7 +34,7 @@ Resources:
                 - !Ref AWS::Region
                 - '.amazonaws.com'
                 
-              ReplaceKeyPrefixWith: /?key=
+              ReplaceKeyPrefixWith: '?key='
               HttpRedirectCode: 307
     DeletionPolicy: Retain
   BucketPolicy:
@@ -54,7 +57,8 @@ Resources:
   LambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
-      MemorySize: 1536
+      MemorySize: !Ref lambdaFunctonMemoryLimit
+      Timeout: 10
       Handler: index.handler
       Role: !GetAtt LambdaExecutionRole.Arn
       Code:
@@ -66,6 +70,7 @@ Resources:
           URL: !GetAtt 
             - S3Bucket
             - WebsiteURL
+          VIPS_DISC_THRESHOLD: 600m
       Runtime: nodejs16.x
   LambdaExecutionRole:
     Type: AWS::IAM::Role
@@ -102,8 +107,8 @@ Resources:
   ApiGateway:
     Type: AWS::ApiGatewayV2::Api
     Properties:
-      Name: ImageHandlerApiGW
       ProtocolType: HTTP
+      Name: S3ImageHanlderApiGateway
   ApiIntegration:
     Type: 'AWS::ApiGatewayV2::Integration'
     Properties:
